--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -44,6 +44,17 @@ body {
     border: 3px solid black;
 }
 
+.form-pseudo{
+    height: 10vh;
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    width:22rem;
+    background-color: rgb(255, 255, 255);
+    font-size: 3rem;
+    margin-top:10px;
+    text-align: center;
+    border: 3px solid black;
+}
+
 input::placeholder {
     text-align: center;
     font-style: italic;
@@ -134,10 +145,6 @@ input::placeholder {
     flex-direction: column;
 }
 
-.ligne2liste{
-    justify-content: space-between;
-}
-
 #derniereLigne1,#derniereLigne2,.ligne1liste{
     display: flex;
     justify-content: center;
@@ -150,7 +157,14 @@ input::placeholder {
     align-items: center;
 }
 
-#derniereLigne2,.ligne2liste{
+.ligne2listeNoSPBTW{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#derniereLigne2,.ligne2liste, .ligne2listeNoSPBTW{
     margin:10px 0;
 }
 
@@ -208,6 +222,12 @@ input::placeholder {
     align-items: center;
 }
 
+.liste{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .ligne1liste h1{
     padding: 0 10px;
 }
@@ -233,18 +253,31 @@ input::placeholder {
     height: calc(90vh - 100px - 10rem - 12px);
 }
 .backliste{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 3vh;
-    font-family: 'Helvetica 55 Roman', sans-serif;
-    width:8vw;
-    background-color: rgb(255, 255, 255);
-    font-size: 1vw;
-    text-align: center;
-    border: 3px solid black;
+    color:rgb(0, 0, 0)
 }
+
+#backliste button {
+    border: 3px solid black;
+    height: 2.5rem;
+    font-size: 20px;
+    width: 10rem;
+    background-color: white;
+    color: black;
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    font-weight: bolder;
+    margin-top: 10px;
+    transition: 0.3s ease;
+}
+
+#backliste button:hover{
+    background-color: black;
+    color: white;
+    transition: 0.3s ease;
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+
 .back{
     display: flex;
     justify-content: center;
@@ -266,7 +299,7 @@ input::placeholder {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
 }
 .infoliste{
     margin-top: 50px;
@@ -397,6 +430,7 @@ input::placeholder {
     background-image: url(../images/ticket.png);
     background-size: cover;
     margin-bottom: 1rem;
+    width:30rem;
 }
 
 .toutArticle h2{
@@ -578,16 +612,49 @@ input::placeholder {
 }
 
 .collaborateur {
-    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 100%;
     margin-bottom: 1rem;
-
+    width:30rem;
+    border: 3px solid black;
 }
+
+#listeCollab{
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    font-size: 2rem;
+}
+
+.collaborateur>h1{
+    color:white;
+    background-color: #000000;
+    width: 100%;
+    text-align: center;
+}
+
+.collaborateur>h2{
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    width: 100%;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.collaborateur>input{
+    width: 10rem;
+    height: 2.5rem;
+    font-size: 1.5rem;
+    margin: 10px;
+    border: 3px solid black;
+}
+
 #btncollaborateur{
     display: flex;
     flex-direction: column;
@@ -595,7 +662,14 @@ input::placeholder {
     justify-content: center;
     width:5rem ;
     height: 5rem;
+    margin: 10px;
+    border: none;
 }
+
+#btncollaborateur>div{
+    transition: 0.5s ease;
+}
+
 .formcollaborateur{
     display: flex;
     flex-direction: column;
