--- a/templates/user/liste_articles.html.twig
+++ b/templates/user/liste_articles.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-        <div class="ligne2liste">
+        <div class="ligne2listeNoSPBTW">
             <div class="retourBouton">
                 <a href="{{ path('app_user_liste') }}">
                     <div id="diagHaut"></div>
