--- a/templates/user/new_liste.html.twig
+++ b/templates/user/new_liste.html.twig
@@ -9,6 +9,6 @@
     {{ include('liste/_form.html.twig') }}
 </div>
 <div id="backliste">
-    <a href="{{ path('app_user_liste') }}" class="backliste">back to list</a>
+    <a href="{{ path('app_user_liste') }}" class="backliste"><button>RETOUR</button></a>
 </div>
 {% endblock %}
