--- a/templates/user/liste.html.twig
+++ b/templates/user/liste.html.twig
@@ -29,27 +29,27 @@
         {% if derniereListeId == null %}
             <h1 class="h1Ligne">Vous n'avez pas encore créé de liste</h1>
         {% else %}
-        <div id="derniereLigne2">
-            <div class="infosLigne">
-                <a href="{{ path('app_user_liste_id', {'id': derniereListeId}) }}"><h1 class="h1Ligne">{{derniereListe.nomListe}} &nbsp;-&nbsp; {{derniereListe.dateCreation | date('d/m/y')}}</h1></a>
+            <div id="derniereLigne2">
+                <div class="infosLigne">
+                    <a href="{{ path('app_user_liste_id', {'id': derniereListeId}) }}"><h1 class="h1Ligne">{{derniereListe.nomListe}} &nbsp;-&nbsp; {{derniereListe.dateCreation | date('d/m/y')}}</h1></a>
+                </div>
+                <br/>
+                <div class="moinsBouton">
+                <form method="post" action="{{ path('app_liste_delete', {'id': derniereListeId}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette liste ?');">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ derniereListeId) }}">
+                    <button class="delete-btn-moins"></button>
+                </form>
+                <form method="post" action="{{ path('app_liste_delete', {'id': derniereListeId}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette liste ?');">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ derniereListeId) }}">
+                    <button class="delete-btn"></button>
+                </form>
+                </div>
             </div>
-            <br/>
-            <div class="moinsBouton">
-            <form method="post" action="{{ path('app_liste_delete', {'id': derniereListeId}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette liste ?');">
-                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ derniereListeId) }}">
-                <button class="delete-btn-moins"></button>
-            </form>
-            <form method="post" action="{{ path('app_liste_delete', {'id': derniereListeId}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette liste ?');">
-                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ derniereListeId) }}">
-                <button class="delete-btn"></button>
-            </form>
-            </div>
-        </div>
         {% endif %}
     </div>
 
 
-    {% if derniereListeId == null %}
+    {% if listeListesRegroup == null %}
         
     {% else %}
         {% for i in 0..listeListesRegroup|length-1 %}
@@ -62,9 +62,6 @@
                 </div>
                 <div class="listeRegroup">
                 {% for j in 0..listeListesRegroup[i]|length-1 %}
-                    { <pre>
-                        {{ dump(listeListesRegroup[i][j]) }}
-                    </pre>}
                     <div class="ligne2liste">
                         <div class="infosLigne">
                             <a href="{{ path('app_user_liste_id', {'id': listeListesRegroup[i][j].id}) }}"><h1 class="h1Ligne">{{listeListesRegroup[i][j].nomListe}}</h1></a>
@@ -85,9 +82,6 @@
                 </div>
 
             </div>
-                <tr>
-                    <td colspan="4">no records found</td>
-                </tr>
         {% endfor %}
     {% endif %}
 
