--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -89,7 +89,7 @@ input::placeholder {
     width: 100%;
     border-bottom: 3px black solid;
     border-top: none;
-    height: 6rem;
+    height: 100%;
     flex-direction: column;
 }
 
@@ -670,4 +670,49 @@ input::placeholder {
     justify-content: center;
     width: 100%;
     height: 100%;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+  
+.table {
+    width: 90%;
+    height: 150px;
+    background-color: #d4e5ff;
+}
+.table .monitor-wrapper {
+    background: #050321;
+    width: 97%;
+    height: 130px;
+    box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+.table .monitor-wrapper .monitor {
+    width: 97%;
+    height: 100px;
+    background-color: #344151;
+    overflow: hidden;
+    white-space: nowrap;
+    box-shadow: inset 0px 5px 10px 2px rgba(0, 0, 0, 0.3);
+}
+.table .monitor-wrapper .monitor p {
+    font-family: 'VT323', monospace;
+    font-size: 50px;
+    position: relative;
+    display: inline-block;
+    animation: move 20s infinite linear;
+    color: #EBB55F;
+}
+
+@keyframes move {
+    from {
+        left: 800px;
+    }
+    to {
+        left: -4800px;
+    }
 }
