--- a/templates/user/liste.html.twig
+++ b/templates/user/liste.html.twig
@@ -6,7 +6,12 @@
 
     <div id="statsContainer">
         <h1>Bonjour, {{ pseudo }}. Voici vos différentes statistiques d'achats :</h1>
-        <div id="slider">
+        <div class="table center">
+            <div class="monitor-wrapper center">
+                <div class="monitor center">
+                <p>Nombre d'articles : {{ user.getNumberOfArticles }}, Prix total : {{ user.getPrixTotal }} €,Prix moyen des articles : {{ user.getPrixMoyenParListe }} €,Prix de l'article le plus cher : {{ user.getPrixMaxParListe }} €,Prix de l'article le moins cher : {{ user.getPrixMinParListe }} €</p>
+                </div>
+            </div>
         </div>
     </div>
 
