--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -673,23 +673,23 @@ input::placeholder {
 }
 
 .center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+    margin: auto;
 }
   
 .table {
     width: 90%;
     height: 150px;
     background-color: #d4e5ff;
+    display: flex;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 .table .monitor-wrapper {
     background: #050321;
     width: 97%;
     height: 130px;
     box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
+    display: flex;
 }
 .table .monitor-wrapper .monitor {
     width: 97%;
@@ -698,6 +698,7 @@ input::placeholder {
     overflow: hidden;
     white-space: nowrap;
     box-shadow: inset 0px 5px 10px 2px rgba(0, 0, 0, 0.3);
+    display: flex;
 }
 .table .monitor-wrapper .monitor p {
     font-family: 'VT323', monospace;
@@ -705,7 +706,8 @@ input::placeholder {
     position: relative;
     display: inline-block;
     animation: move 20s infinite linear;
-    color: #EBB55F;
+    color: #FFFFFF;
+    align-self: center;
 }
 
 @keyframes move {
