--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -679,13 +679,13 @@ input::placeholder {
 .table {
     width: 90%;
     height: 150px;
-    background-color: #d4e5ff;
+    background-color: #ffffff;
     display: flex;
     margin-bottom: 10px;
     margin-top: 10px;
 }
 .table .monitor-wrapper {
-    background: #050321;
+    background: #000000;
     width: 97%;
     height: 130px;
     box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
