--- a/templates/user/liste.html.twig
+++ b/templates/user/liste.html.twig
@@ -9,7 +9,7 @@
         <div class="table center">
             <div class="monitor-wrapper center">
                 <div class="monitor center">
-                <p>Nombre d'articles : {{ user.getNumberOfArticles }}, Prix total : {{ user.getPrixTotal }} €, Prix moyen des articles : {{ user.getPrixMoyenParListe }} €, Prix de l'article le plus cher : {{ user.getPrixMaxParListe }} €, Prix de l'article le moins cher : {{ user.getPrixMinParListe }} €</p>
+                <p>Nombre d'articles : <font color="FF0000">{{ user.getNumberOfArticles }}</font>, Prix total : <font color="FF0000">{{ user.getPrixTotal }}</font> €, Prix moyen des articles : <font color="FF0000">{{ user.getPrixMoyenParListe }} </font>€, Prix de l'article le plus cher : <font color="FF0000">{{ user.getPrixMaxParListe }} </font>€, Prix de l'article le moins cher : <font color="FF0000">{{ user.getPrixMinParListe }} </font>€</p>
                 </div>
             </div>
         </div>
