--- a/templates/user/show_liste.html.twig
+++ b/templates/user/show_liste.html.twig
@@ -64,6 +64,7 @@
                     {{ form_row(form.estMarque) }}
                     <button type="submit">{{button_label|default("Ajouter")}}</button>
                 {{ form_widget(form) }}
+                {{ form_end(form) }}
             </div>
         </div>
         
