--- a/templates/compose/index.html.twig
+++ b/templates/compose/index.html.twig
@@ -18,6 +18,7 @@
         {% for compose in composes %}
             <tr>
                 <td>{{ compose.id }}</td>
+                <td>{{ compose.idListe }}</td>
                 <td>{{ compose.quantite }}</td>
                 <td>{{ compose.estMarque ? 'Yes' : 'No' }}</td>
                 <td>
