--- a/templates/user/show_liste.html.twig
+++ b/templates/user/show_liste.html.twig
@@ -39,7 +39,16 @@
                 <div class="article item_liste">
                     <div class="article_quantite">{{ article.quantite }}</div>
                     <div class="article_nom">{{ article.idArticle.nomArticle }}</div>
-                    <button class="supprimerarticle">-</button>
+                    <div class="moinsBouton">
+                        <form method="post" action="{{ path('app_compose_delete', {'id': article.id}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette liste ?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ article.id) }}">
+                            <button class="delete-btn-moins"></button>
+                        </form>
+                        <form method="post" action="{{ path('app_compose_delete', {'id': article.id}) }}" onsubmit="return confirm('Voulez vous vraiment supprimer cette liste ?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ article.id) }}">
+                            <button class="delete-btn"></button>
+                        </form>
+                    </div>
                     <div class="article_prix">{{ article.quantite * article.idArticle.prix }}</div>
                     <br>
                 </div>
