--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -49,11 +49,11 @@ body::-webkit-scrollbar {
 }
 
 .form-collab{
-    height: 4rem;
+    height: 2.5rem;
     font-family: 'Helvetica 55 Roman', sans-serif;
-    width:22rem;
+    width:15rem;
     background-color: rgb(255, 255, 255);
-    font-size: 3rem;
+    font-size: 20px;
     margin-top:10px;
     text-align: center;
     border: 3px solid black;
@@ -359,18 +359,18 @@ input::placeholder {
     align-items: center;
     text-align: center;
     color:black;
-    height:5vh;
-    width: 8vw;
+    height:3rem;
+    width: 4rem;
     font-size: 1rem;
 }
 .article_nom{
     display: flex;
     justify-content: start;
     align-items: center;
-    text-align: center;
+    text-align: left;
     color:black;
-    height:5vh;
-    width: 20vw;
+    height:3rem;
+    width: 20rem;
     font-size: 1rem;
 }
 .article_prix,.defprix{
@@ -379,8 +379,8 @@ input::placeholder {
     align-items: center;
     text-align: center;
     color:black;
-    height:5vh;
-    width: 8vw;
+    height:3rem;
+    width: 4rem;
     font-size: 1rem;
 }
 .supprimerarticle{
@@ -390,8 +390,10 @@ input::placeholder {
     text-align: center;
     background-color: black;
     color:white;
-    height:3vh;
-    width: 2vw;
+    height:1.8rem;
+    position: relative;
+    left: 6rem;
+    width:2rem;
     font-size: 1rem;
     font-weight: 900;
 }
@@ -406,8 +408,8 @@ input::placeholder {
     align-items: center;
     text-align: center;
     color:black;
-    height:5vh;
-    width: 21.9vw;
+    height:3rem;
+    width: 22rem;
     font-size: 1rem;
 }
 .finticket{
@@ -416,6 +418,9 @@ input::placeholder {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    margin-left: 10px;
+    flex-direction: row;
+
 }
 
 .finticket span{
@@ -611,7 +616,7 @@ input::placeholder {
     justify-content: center;
     height: 100%;
     margin-bottom: 1rem;
-    width:30rem;
+    width:24rem;
     border: 3px solid black;
 }
 
@@ -630,13 +635,15 @@ input::placeholder {
     color:white;
     background-color: #000000;
     width: 100%;
+    font-size: 30px;
     text-align: center;
+    padding: 0 0 3px 0;
 }
 
 .collaborateur>h2{
     font-family: 'Helvetica 55 Roman', sans-serif;
     width: 100%;
-    font-size: 2rem;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -717,4 +724,30 @@ input::placeholder {
     to {
         left: -4800px;
     }
+}
+
+
+.error{
+    color: red;
+    font-size: 1.5rem;
+    font-family: 'Helvetica 55 Roman', sans-serif;
+    font-weight: bolder;
+    margin-top: 10px;
+}
+
+#checkboxAchete{
+    width: 3rem;
+    height: 3rem;
+    background-color: #ffffff00;
+    margin: 10px;
+    position: relative;
+    left: 1rem;
+}
+
+#checkboxAchete:hover{
+    cursor: pointer;
+}
+
+#checkboxAchete:checked{
+    accent-color: black;
 }
