--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -390,12 +390,20 @@ input::placeholder {
     text-align: center;
     background-color: black;
     color:white;
+    border: none;
     height:1.8rem;
     position: relative;
     left: 6rem;
     width:2rem;
     font-size: 1rem;
     font-weight: 900;
+    transition: 0.3s ease;
+}
+
+.supprimerarticle:hover{
+    transition: 0.3s ease;
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 .infosTicket{
@@ -741,7 +749,7 @@ input::placeholder {
     background-color: #ffffff00;
     margin: 10px;
     position: relative;
-    left: 1rem;
+    bottom: -1.6rem;
 }
 
 #checkboxAchete:hover{
@@ -750,4 +758,17 @@ input::placeholder {
 
 #checkboxAchete:checked{
     accent-color: black;
+}
+
+
+.btnCheck{
+    width: 3rem;
+    height: 3rem;
+    top: -2rem;
+    position: relative;
+    opacity: 0;
+}
+
+.btnCheck:hover{
+    cursor: pointer;
 }
