--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -11,7 +11,7 @@
                 <div>Id</div>
                 <div>NomArticle</div>
                 <div>Prix</div>
-                <div>actions</div>
+                <div>Actions</div>
             </div>
             <div class="toutarticle">
             {% for article in articles %}
