--- a/templates/type_article/index.html.twig
+++ b/templates/type_article/index.html.twig
@@ -26,6 +26,7 @@
         {% endfor %}
         </div>
     </div>
+    </div>
 
     <a href="{{ path('app_type_article_new') }}" class="btn-newtypearticle"><button>Créer un Type</button></a>
 {% endblock %}
