--- a/templates/type_article/new.html.twig
+++ b/templates/type_article/new.html.twig
@@ -3,9 +3,15 @@
 {% block title %}New TypeArticle{% endblock %}
 
 {% block body %}
-    <h1>Create new TypeArticle</h1>
+    
+    <div class="containerCRUD">
+        <div id="addArticleContainerCRUD">
+        <h2>Créer un nouveau type d'article</h2>
+            <div class="container_recherche" id="container_recherche">
+                {{ include('type_article/_form.html.twig') }}
+            </div>
+        </div>
 
-    {{ include('type_article/_form.html.twig') }}
-
-    <a href="{{ path('app_type_article_index') }}">back to list</a>
+        <a href="{{ path('app_type_article_index') }}">back to list</a>
+    </div>
 {% endblock %}
