--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -106,7 +106,7 @@ input::placeholder {
 
 #plusBouton:hover, .moinsBouton:hover{
     transform: scale(1.2);
-    transition: 0.5s ease;
+    transition: 0.3s ease;
     cursor: pointer;
 }
 
@@ -794,12 +794,19 @@ input::placeholder {
     position: relative;
     background-color: #000000;
     width: 3rem;
-    height: 2rem;
+    height: 3rem;
+    transition: 0.3s ease;
+}
+
+.supprCollab:hover {
+    cursor: pointer;
+    transition: 0.3s ease;
+    transform: scale(1.2);
 }
 
 #moinsCollab {
     position: absolute;
-    top: 0.5rem;
+    top: 1rem;
     left: 0.5rem;
     width: 2rem;
     height: 1rem;
@@ -811,6 +818,11 @@ input::placeholder {
     text-align: center;
     transition: 0.3s ease;
 }
+
+#moinsCollab:hover {
+    cursor: pointer;
+}
+
 .admin{
     display: flex;
     flex-direction: row;
