--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -7,7 +7,9 @@
     <img src="{{ asset('images/Shoppinggauche.png') }}" alt="logo" width="100" height="100">
   </div>
 </div>
+{% if pseudo == 'Minh' %}
 <div class="admin">
   <a href="{{ path('app_article_index') }}">Article</a>
   <a href="{{ path('app_type_article_index') }}">Type-Article</a>
 </div>
+{% endif %}
